2023-10-24T00:43:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6620765885 # 2012
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
* notice: last 14d: unq all: 66 134
* notice: prev accum: outdated-unq outdated-all / unq all: 1774 5502 / 1874 5645
* notice: next accum: outdated-unq outdated-all / unq all: 1784 5513 / 1875 5647
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +4 +5 -0 -0 / 4 5
* notice: removed / changed dates: [2023-10-09] / [2023-10-23]

2023-10-23T16:12:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6615990846 # 2011
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 66 133
* notice: prev accum: outdated-unq outdated-all / unq all: 1774 5502 / 1872 5643
* notice: next accum: outdated-unq outdated-all / unq all: 1774 5502 / 1874 5645
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -6 -6 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-23T08:12:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6610496216 # 2010
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-23
* notice: last 14d: unq all: 70 137
* notice: prev accum: outdated-unq outdated-all / unq all: 1774 5502 / 1871 5642
* notice: next accum: outdated-unq outdated-all / unq all: 1774 5502 / 1872 5643
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -3 -4 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-09 2023-10-23]

2023-10-23T00:43:34Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6607267369 # 2009