@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-11T00:43:06Z",
-  "count" : 23,
-  "count_minmax" : [ 16, 23 ],
-  "count_decinc" : [ -0, +23 ],
-  "uniques" : 16,
-  "uniques_minmax" : [ 12, 16 ],
-  "uniques_decinc" : [ -0, +16 ]
+  "timestamp" : "2023-10-24T08:12:49Z",
+  "count" : 7,
+  "count_minmax" : [ 7, 23 ],
+  "count_decinc" : [ -16, +23 ],
+  "uniques" : 6,
+  "uniques_minmax" : [ 6, 16 ],
+  "uniques_decinc" : [ -10, +16 ]
 }
