@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-10-24T00:43:07Z",
+  "timestamp" : "2023-10-24T08:12:49Z",
   "count_outdated" : 5513,
   "uniques_outdated" : 1784,
-  "count" : 5647,
-  "uniques" : 1875,
+  "count" : 5648,
+  "uniques" : 1876,
   "clones" : [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 16, 23 ],
-      "count_decinc": [ 0, 23 ],
-      "uniques": 16,
-      "uniques_minmax": [ 12, 16 ],
-      "uniques_decinc": [ 0, 16 ]
+      "count": 7,
+      "count_minmax": [ 7, 23 ],
+      "count_decinc": [ 16, 23 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 16 ],
+      "uniques_decinc": [ 10, 16 ]
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
