@@ -1,11 +1,11 @@
 {
-  "count": 134,
-  "uniques": 66,
+  "count": 119,
+  "uniques": 57,
   "clones": [
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 23,
-      "uniques": 16
+      "count": 7,
+      "uniques": 6
     },
     {
       "timestamp": "2023-10-11T00:00:00Z",
@@ -71,6 +71,11 @@
       "timestamp": "2023-10-23T00:00:00Z",
       "count": 5,
       "uniques": 4
+    },
+    {
+      "timestamp": "2023-10-24T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
