@@ -1,3 +1,12 @@
+2023-10-24T08:12:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6624116900 # 2013
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
+* notice: last 14d: unq all: 57 119
+* notice: prev accum: outdated-unq outdated-all / unq all: 1784 5513 / 1875 5647
+* notice: next accum: outdated-unq outdated-all / unq all: 1784 5513 / 1876 5648
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -10 -16 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-10 2023-10-24]
+
 2023-10-24T00:43:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6620765885 # 2012
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-24
